--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,9 @@
         <dependency>
             <groupId>su.nightexpress.nightcore</groupId>
             <artifactId>main</artifactId>
-            <version>2.10.0</version>
-            <scope>provided</scope>
+            <version>2.11.0</version>
+            <systemPath>${project.basedir}/lib/nightcore-2.11.0.jar</systemPath>
+            <scope>system</scope>
         </dependency>
 
         <dependency>
